trunk/Archive2/50/2d240ae7925c1e/output
main.cpp:8:8: error: expected ';' after expression
    foo f;
       ^
       ;
main.cpp:8:9: error: use of undeclared identifier 'f'
    foo f;
        ^
main.cpp:8:5: warning: expression result unused [-Wunused-value]
    foo f;
    ^~~
1 warning and 2 errors generated.
